syntax = "proto3";

option go_package = "github.com/i-Pear/Distributed-Systems-Assignments/Assignment01/protocol";

package Assignment01;

service TimeService {
  rpc GetTime (TimeRequest) returns (TimeReply) {}
}

message TimeRequest {
  string token = 1;
}

message TimeReply {
  uint64 server_time = 1;
}
